Wire waitlist form to Formspree

--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -13,7 +13,7 @@
       <p class="cta-sub">
         Join the waitlist. Be the first to run your business through chat.
       </p>
-      <form class="cta-form" action="#" method="post">
+      <form class="cta-form" action="https://formspree.io/f/mpqjlqne" method="post">
         <input
           type="email"
           name="email"
